--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -14,6 +14,7 @@ $box-shadow-img: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 $colors: (
     'blue': #4267b2,
+    'dark-blue': #274b91,
     'orange': #fbb96b,
     "pink": rgb(251, 181, 193),
     'white': #fff,
@@ -23,6 +24,6 @@ $colors: (
     'yellow': rgb(242, 242, 13),
 );
 
-$mobile-width: 600px;
+$mobile-width: 1080px;
 
 $numbers: (0, 1, 2, 3, 4, 5, 6, 7, 8);
