--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,12 +1,8 @@
 .footer{
-    padding: 30px 0;
+    width: 100%;
+    padding: 30px 20px;
     box-shadow: $box-shadow;
     font-size: 1.1rem;
-    border-top: 1px solid $main-color;
-
-    &__logo{
-        height: 38px;
-    }
 
     &__title{
         text-transform: uppercase;
