--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,150 +1,77 @@
 .header {
-    background-color: $main-bg;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 99;
-    height: $header-height;
-    border-bottom: 1px solid $main-color;
-
-    @include mobile {
-        height: $header-mobile-height;
-        box-shadow: $box-shadow;
-        z-index: 100;
-    }
-
-    .container {
-        height: 100%;
-    }
-
-    &.shrink {
-        height: $header-shrink-height;
-        box-shadow: $box-shadow;
-    }
+    position: sticky;
+    top: -80px;
+    z-index: 100;
+    background-color: #fff;
 
     &__logo {
-        @include flex(center, center);
-        position: absolute;
-        inset: 0;
-        pointer-events: none;
-
         img {
-            height: 28px;
+            height: 80px;
         }
+
+        margin: 20px 20px;
     }
 
     &__menu {
-        @include flex(center, space-between);
-        height: 100%;
-        font-size: 1.5rem;
-
-        &__item~&__item {
-            margin-left: 39px;
-
-            @include mobile {
-                margin-left: 20px;
-            }
-        }
-
-        &__item.active {
-            font-weight: 600;
-            color: $main-color;
-        }
-
-        &__item:hover {
-            color: $main-color;
-        }
-
-        &__left,
-        &__right {
-            @include flex(center, center);
-            height: 100%;
-        }
-
-        &__right {
-            font-size: 2.25rem;
-
-            &__item {
-                @include flex(center, center);
-                &:hover{
-                    cursor: pointer;
-                }
-            }
-
-            &__search{
-                margin-right: 10px;
-
-                input{
-                    border-radius: 10px;
-                    height: 2rem;
-                    width: 200px;
-                    border: 1px solid $txt-second-color;
-                    padding: 4px;
-                    margin-bottom: 10px;
-                }
-            }
-
-            @include mobile {
-                font-size: 1.5rem;
-            }
-        }
-
-        &__mobile-toggle {
-            display: none;
-
-            @include mobile {
-                display: block;
-                font-size: 2rem;
-            }
-        }
-
-        &__mobile-toggle:hover{
-            cursor: pointer;
-        }
+        display: flex;
+        justify-content: space-between;
+        position: sticky;
+        top: 0;
 
         &__left {
-            padding-top: 30px;
+            width: 400px;
+            flex-grow: 1;
 
-            &__close {
-                display: none;
+            .ant-menu-item {
 
-                &:hover{
-                    cursor: pointer;
-                    color: $main-color;
+                .anticon,
+                .ant-menu-title-content {
+                    font-size: 1.5rem;
                 }
             }
 
-            @include mobile {
-                flex-direction: column;
-                background-color: $main-bg;
-                box-shadow: $box-shadow-img;
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 50vw;
-                height: 100vh;
-                justify-content: flex-start;
-                transform: translateX(-100%);
-                transition: transform 0.5s linear;
+        }
 
-                &.active{
-                    transform: translateX(0);
-                }
+        &__right {
+            width: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-                &__item ~ &__item{
-                    margin-left: unset;
-                    margin-top: 20px;
-                }
-
-                &__close{
-                    display: block;
-                    position: absolute;
-                    left: 20px;
-                    font-size: 2rem;
-                }
+            .anticon {
+                font-size: 2rem;
+                padding-left: 20px;
             }
         }
-    }
 
+        &__icon {
+            padding: 10px 10px;
+
+            .anticon{
+                font-size: 1.75rem;
+            }
+        }
+
+    }
+}
+
+.ant-drawer-body{
+    ul{
+        font-size: 1.5rem;
+        .anticon{
+            font-size: 1.5rem;
+        }
+    }
+}
+
+@media (max-width: $mobile-width){
+    .header__menu__left{
+        display: none;
+    }
+}
+
+@media (min-width: $mobile-width){
+    .header__menu__icon{
+        display: none;
+    }
 }
