--- a/src/sass/components/_hero-silder.scss
+++ b/src/sass/components/_hero-silder.scss
@@ -1,42 +1,12 @@
-.hero-slider {
-    height: 100vh;
-    // max-height: 1080px;
-    // overflow: hidden;
-    position: relative;
-    margin-bottom: 50px;
-    margin-top: calc(#{$header-height});
-
-    @include mobile {
-        margin-top: calc(#{$header-mobile-height});
-    }
-
-    &__item {
-        @include flex(center, center);
-
-        @include mobile{
-            flex-direction: column-reverse;
-            padding-top: $header-mobile-height;
-        }
-
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-        position: absolute;
-        inset: 0;
-
-        &.active {
-            opacity: 1;
-            visibility: visible;
-            pointer-events: visible;
-        }
+.ant-carousel {
+    .hero-slider__item {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         &__info {
-            width: 58%;
-
-            @include mobile{
-                width: 100%;
-                flex-grow: 1;
-            }
+            width: 60%;
 
             &__title,
             &__description {
@@ -50,12 +20,12 @@
             &__title {
                 font-family: 'M PLUS Rounded 1c', sans-serif;
                 font-weight: 600;
-                font-size: 4.5rem;
-                line-height: 6.75rem;
+                font-size: 3.5rem;
+                line-height: 5rem;
                 overflow: hidden;
                 color: $main-color;
 
-                @include mobile{
+                @include mobile {
                     font-size: 2.5rem;
                     line-height: 3.25rem;
                 }
@@ -63,86 +33,26 @@
 
             &__description {
                 color: $txt-second-color;
-                font-size: 1.5rem;
-                line-height: 2.25rem;
-                overflow: hidden;
-
+                font-size: 1.25rem;
+                line-height: 1.5rem;
             }
 
             &__btn {
-                overflow: hidden;
+                display: flex;
+                justify-content: center;
             }
 
-            &__title>span,
-            &__description>span,
-            &__btn button {
-                display: block;
-                transform: translateY(-100%);
-                transition: transform 0.5s linear;
-            }
-        }
-
-        &.active &__info{
-            &__title>span,
-            &__description>span,
-            &__btn button {
-                transform: translateY(0);
-
-            }
         }
 
         &__image {
+            width: 40%;
             flex-grow: 1;
-            position: relative;
-            height: 100%;
-            z-index: 98;
-            pointer-events: none;
-
-            @include mobile{
-                width: 100%;
-                height: 60%;
-                @include flex(center, center);
-                flex-grow: unset;
-            }
 
             img {
-                height: 100vh;
-                position: absolute;
-                bottom: 0;
-                right: 0;
-
-                @include mobile{
-                    height: 100%;
-                    position: relative;
-                }
+                width: 100%;
             }
         }
 
     }
 
-    &__control {
-        @include flex(center, center);
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-
-        &__item+&__item {
-            margin-left: 10px;
-        }
-
-        &__item {
-            @include flex(center, center);
-            font-size: 2rem;
-
-            &:hover {
-                cursor: pointer;
-                color: $main-color;
-            }
-
-            .index {
-                font-size: 1.5rem;
-            }
-        }
-    }
 }
