--- a/src/sass/components/_catalog.scss
+++ b/src/sass/components/_catalog.scss
@@ -1,47 +1,75 @@
-.catalog{
-    @include flex(flex-start, flex-start);
-    position: relative;
+.catalog {
+    padding-top: 20px;
 
-    &__filter{
-        margin-top: 20px;
-        width: 20%;
-
-        @include mobile{
-            width: unset;
+    &__header {
+        &__route {
+            padding-bottom: 20px;
         }
 
-        &__widget{
-            margin-bottom: 2rem;
+        &__search {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-            &__title{
-                font-size: 1.25rem;
-                font-weight: 600;
-                text-transform: capitalize;
-                margin-bottom: 1rem;
+        &__filter {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.25rem;
+            font-weight: 500;
+
+            @include mobile{
+                font-size: 1rem;
             }
 
-            &__content{
-                color: $txt-second-color;
-
-                &__item{
-                    margin-bottom: 1rem;
-                }
-            }
-
-            &__search{
-                padding-bottom: 20px;
-                
-                input{
-                    height: 2rem;
-                    border-radius: 20px;
-                    padding: 6px;
-                    border: 1px solid $txt-second-color;
-                }
+            .anticon {
+                padding-left: 10px;
             }
         }
     }
 
-    &__content{
-        width: 80%;
+    &__content {
+        padding-top: 50px;
+
+        .ant-row{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 20px;
+        }
+
     }
+}
+
+.catalog__filter {
+    &__title {
+        font-weight: 500;
+        font-size: 1.5rem;
+        padding: 10px 0;
+    }
+
+    &__content {
+        font-size: 1.25rem;
+        padding-bottom: 20px;
+    }
+
+    .ant-checkbox-wrapper {
+        width: 40%;
+        height: 2rem;
+
+        >span:last-child {
+            width: 150px;
+        }
+    }
+
+    button {
+        width: 100px;
+        left: 50%;
+        transform: translateX(-70%);
+    }
+}
+
+.ant-drawer-body {
+    margin-left: 30px;
 }
