--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -1,41 +1,29 @@
-.product-card{
-    @include flex(center, center);
-    flex-direction: column;
-    margin-bottom: 30px;
-
-    &__image{
-        margin-bottom: 10px;
-        margin-top: 20px;
-        width: 100%;
-        @include flex(center, center);
-
-        img{
-            width: 80%;
-
-            &:hover{
-                box-shadow: $box-shadow-img;
-            }
-        }
+.product-card {
+    .ant-card-body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
     }
 
     &__name{
-        margin-bottom: 10px;
-        color: $txt-second-color;
-        font-size: 1.25rem;
+        overflow: hidden;
+        height: 2rem;
+        color: $main-color;
         font-weight: 500;
-        @include flex(center, center);
+
+        @include mobile{
+            font-size: 0.8rem;
+            height: 3rem;
+        }
     }
 
     &__price{
-        color: $main-color;
-        font-size: 1.5rem;
-        font-weight: 600;
-        margin-bottom: 10px;
-        @include flex(center, center);
+        font-weight: 500;
+        
+        @include mobile{
+            font-size: 0.8rem;
+        }
     }
-
-    &__btn{
-        @include flex(center, center);
-    }
-
 }
