--- a/src/sass/components/_product.scss
+++ b/src/sass/components/_product.scss
@@ -1,67 +1,65 @@
-.product{
-    @include flex(flex-start, flex-start);
-    padding-top: 50px;
+.product {
+    &__image {
 
-    &__image{
-        width: 60%;
-
-        img{
-            width: 60%;
+        &__main,
+        &__sub {
+            img {
+                width: 100%;
+            }
         }
     }
 
-    &__info{
-        flex-grow: 1;
+    &__info {
         padding: 0 2rem;
 
-        &__title{
-            font-size: 2rem;
+        &__title {
+            font-size: 1.75rem;
             font-weight: 500;
+            color: $main-color;
         }
 
-        &__item{
+        &__item {
             margin-top: 2rem;
 
-            &__price{
-                color: $main-color;
-                font-size: 2rem;
-                font-weight: 600;
+            &__price {
+                font-size: 1.5rem;
+                font-weight: 700;
             }
 
-            &__title{
-                font-size: 1.5rem;
+            &__title {
+                font-size: 1.2rem;
                 font-weight: 600;
                 margin-bottom: 1rem;
             }
 
-            &__list{
+            &__list {
                 @include flex(center, flex-start);
 
-                &__item{
+                &__item {
                     @include flex(center, center);
 
-                    width: 40px;
-                    height: 40px;
+                    width: 30px;
+                    height: 30px;
                     border-radius: 50%;
                     border: 1px solid $txt-second-color;
                     cursor: pointer;
                     margin-right: 1rem;
 
-                    &:hover{
+                    &:hover {
                         border-color: $main-color;
                     }
 
-                    &.active{
+                    &.active {
                         border: 3px solid $main-color;
                     }
 
-                    .circle{
+                    .circle {
                         width: 90%;
                         height: 90%;
                         border-radius: 50%;
                     }
 
-                    &__size{
+                    &__size {
                         text-transform: uppercase;
                         font-weight: 500;
                         font-size: 1.25rem;
@@ -69,10 +67,10 @@
                 }
             }
 
-            &__quantity{
+            &__quantity {
                 @include flex(flex-start, flex-start);
 
-                &__btn{
+                &__btn {
                     @include flex(center, center);
 
                     width: 30px;
@@ -82,51 +80,20 @@
                     cursor: pointer;
                 }
 
-                &__input{
+                &__input {
                     @include flex(center, center);
                     height: 30px;
                     width: 70px;
-                    font-size: 1.5rem;
+                    font-size: 1.2rem;
                     border-top: 1px solid $txt-second-color;
                     border-bottom: 1px solid $txt-second-color;
                 }
             }
 
-            button{
+            button {
                 margin-right: 1rem;
-                
+
             }
         }
-    }
-}
-
-.product-description{
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-    position: relative;
-
-    &.expand{
-        height: max-content;
-    }
-
-    &__title{
-        font-size: 1.5rem;
-        font-weight: 600;
-        margin: 2rem 0;
-    }
-
-    &__content{
-        font-size: 1.25rem;
-        line-height: 1.8rem;
-        text-align: justify;
-        padding-bottom: 50px;
-    }
-
-    &__toggle{
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
     }
 }
