--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -1,71 +1,106 @@
 .cart {
-    @include flex(flex-start, flex-start);
-    position: relative;
-
-    @include mobile {
-        flex-wrap: wrap;
-    }
-
-    &__info {
-        margin-top: 30px;
-        margin-right: 30px;
-
-
-        &__txt {
-            &>* {
-                margin-bottom: 10px;
-            }
-
-            p {
-                font-size: 1.25rem;
-            }
-
-            &__price {
-                font-size: 1.5rem;
-                color: $main-color;
-            }
-        }
-
-        &__btn>* {
-            margin-bottom: 20px;
-        }
-    }
-
-    &__list {
-        width: 75%;
-        margin-top: 30px;
-
+    &__header {
+        padding: 20px 0;
     }
 
     &__item {
-        @include flex(center, flex-start);
-        position: relative;
-        left: 20%;
-        margin-bottom: 20px;
-
-        &__image {
-            padding-right: 20px;
-
-            img {
-                height: 160px;
-            }
-        }
+        padding: 20px;
 
         &__info {
-            &__name,
-            &__price {
+
+            &__name {
+                font-weight: 500;
                 font-size: 1.25rem;
-            }
-            
-            &>*{
-                padding-bottom: 10px;
+                padding-bottom: 20px;
+
+                @include mobile{
+                    font-size: 1rem;
+                    padding-bottom: 5px;
+                }
+
+                &__detail {
+                    padding-top: 20px;
+                    font-size: 1rem;
+                    text-transform: uppercase;
+
+                    @include mobile{
+                        font-size: 0.7rem;
+                        font-weight: 500;
+                        padding-top: 5px;
+                    }
+                }
             }
 
-            &__del{
-                font-size: 2rem;
-                cursor: pointer;
+            &__price {
+                font-weight: 600;
+                font-size: 1.25rem;
+                padding-bottom: 20px;
+
+                @include mobile{
+                    padding-bottom: 5px;
+                }
             }
+
+            &__del {
+                .anticon {
+                    padding-top: 20px;
+                    font-size: 1.75rem;
+
+                    @include mobile{
+                        padding-top: 10px;
+                        font-size: 1.25rem;
+                    }
+
+                    &:hover {
+                        color: rgb(225, 61, 61);
+                    }
+                }
+            }
+
         }
     }
 
+    &__info{
+        &__txt{
+            p{
+                font-size: 1.25rem;
+
+                @include mobile{
+                    font-size: 1rem;
+                }
+            }
+
+            &__price{
+                font-size: 1.5rem;
+                font-weight: 500;
+            }
+        }
+
+        &__btn {
+            margin-top: 20px;
+            @include mobile{
+                @include flex(flex-start, flex-start);
+                flex-direction: column;
+            }
+
+            .ant-btn {
+                width: 150px;
+                height: 50px;
+                margin-right: 10px;
+                text-transform: uppercase;
+                font-size: 0.9rem;
+
+                @include mobile {
+                    width: 120px;
+                    height: 30px;
+                    font-size: 0.65rem;
+                    margin-top: 10px;
+                }
+            }
+        }
+    }
+}
+
+.ant-row {
+    margin-bottom: 20px;
 }
