--- a/src/sass/components/_catalog.scss
+++ b/src/sass/components/_catalog.scss
@@ -65,8 +65,8 @@
 
     button {
         width: 100px;
-        left: 50%;
-        transform: translateX(-70%);
+        left: 5%;
+        margin-right: 20px;
     }
 }
 
