--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -52,6 +52,7 @@
             .anticon {
                 font-size: 2rem;
                 padding-left: 20px;
+                color: $main-color;
             }
         }
 
